Adicionando Badgets para status entre outras mudanças grandes, apenas em função de incrementar as funcionalidades do CSU 11 #53